Switched to Tailwind and Parcel Nightly

--- a/src/index.html
+++ b/src/index.html
@@ -1,67 +1,8 @@
-<html>
+<html lang="en" class="text-gray-900 leading-tight">
   <head>
-    <link href="styles/main.scss" rel="stylesheet" />
+    <link href="styles/app.pcss" rel="stylesheet" />
   </head>
-  <body>
-    <div class="site-grid">
-      <header class="site-header">
-        <div class="container">
-          <nav class="site-header-nav">
-              <div class="logo">Sandbox</div>
-              <ul>
-                  <li>Home</li>
-                  <li>Posts</li>
-                  <li>About</li>
-              </ul>
-          </nav>
-        </div>
-      </header>
-      <main class="site-main">
-          <div class="site-main-content">
-              <ul>
-                  <li>
-                      <article>
-                          <header>
-                              <h3>article header</h3>
-                              <span>2034, march 4, 13:45</span>
-                            </header>
-                          <div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Ut eleifend eget tortor vitae dictum. Curabitur pharetra,
-                                velit nec tincidunt semper, diam dui bibendum ante, ac mattis
-                                lacus dolor ut orci. Ut tortor lectus, feugiat sit amet commodo vitae,
-                                commodo eget nunc. Mauris accumsan vitae urna a venenatis.
-                                Sed vel molestie diam. Maecenas cursus blandit neque nec
-                                aliquet. Mauris sit amet eleifend sem.
-                            </p>
-                            <p>
-                                Duis nibh diam, pellentesque consectetur interdum non, blandit
-                                nec neque. Nulla aliquet ultricies egestas. Morbi at augue purus.
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada
-                                fames ac turpis egestas. Fusce aliquet aliquet mi, a efficitur
-                                arcu finibus non. Morbi mollis ut libero ut condimentum.
-                                Pellentesque velit sapien, congue pellentesque tincidunt a,
-                                placerat at justo. In imperdiet, nisi a tempus vestibulum, massa
-                                augue ullamcorper mi, ut euismod libero mauris semper lorem.
-                                Donec non justo malesuada, porttitor dolor vel, suscipit neque.
-                                Duis tempor aliquam dictum. Nullam eget est fermentum, hendrerit nulla non,
-                                posuere nunc. Fusce placerat augue elit, in cursus quam tempor quis.
-                                Aliquam in lacus molestie, convallis erat nec, consectetur erat.
-                                Praesent vestibulum urna eu eros eleifend elementum.
-                                </p>
-                            </div>
-                      </article>
-                  </li>
-              </ul>
-          </div>
-          <div class="site-main-nav">nav</div>
-      </main>
-      <footer class="site-footer">
-          <div>site links</div>
-          <div>site other</div>
-          <div>copyright</div>
-      </footer>
-    </div>
+  <body class="min-h-screen bg-gray-100">
+    hello, world
   </body>
 </html>
